chore: Regular code maintenance

--- a/2025.md
+++ b/2025.md
@@ -1,6 +1,4 @@
-# 2025 记录
-
-## BBR 设计动机 (2025/4/19)
+# 2025/4/19
 
 BBR 前, 主流的 TCP 拥塞控制算法都以数据包丢失 (loss-based) 作为网络拥塞的信号, 这种不太合理的 "等价" 最早可以追溯到 1980s 到 1990s，当时的链路容量和缓冲区容量分别以 Mbps 和 KB 计, 参考现在的标准, 链路质量可以说很差
 
@@ -166,4 +164,101 @@ void TcpBbr::AdvanceCyclePhase() {
 ```
 
 - 如果 BtlBw 不变: delivery rate 不变, 1.25 后队列积压, 0.75 后队列耗尽
-- 如果 BtlBw 增大: delivery rate 增大, 新的 delivery rate 最大值会更新 BBR 对 BtlBw 的估计值, 进而增大基础 pacing rate
+- 如果 BtlBw 增大: delivery rate 增大, 新的 delivery rate 最大值会更新 BBR 对 BtlBw 的估算值, 进而增大基础 pacing rate
+
+# 2025/04/23
+
+## BBR 状态机
+
+```cpp
+const char* const TcpBbr::BbrModeName[BBR_PROBE_RTT + 1] = {
+  "BBR_STARTUP", // 连接启动时
+  "BBR_DRAIN", //
+  "BBR_PROBE_BW",
+  "BBR_PROBE_RTT",
+};
+```
+
+- Startup 阶段: 为了处理跨 12 个数量级的网络带宽, Startup 阶段使用使用 2/ln2 的增益, 指数增大发送速率, 可以在 logBDP 个 rtt 内探测到 bdp, 但是最多导致 (2/ln2 - 1), 约等于 2 个 bdp 的积压 (startup queue), 探测到 BtlBw 后, 转到 Drain 阶段
+- Drain 阶段: 使用 ln2/2 的增益减小发送速率, 排空 Startup 阶段的积压 (startup queue)
+- ProbeBW 阶段: 稳态行为
+- ProbeRTT 阶段: 最小 rtt 周期内 (10s) 未更新, 或 bdp 显著下降时, 进入 ProbeRTT 阶段, bbr 使用极低的发送速率 (默认 1p/rtt) 排空瓶颈缓冲区的积压, 测量并更新最小 rtt
+
+```sh
+// net/ipv4/tcp_bbr.c
+
+         |
+         V
++---> STARTUP  ----+
+|        |         |
+|        V         |
+|      DRAIN   ----+
+|        |         |
+|        V         |
++---> PROBE_BW ----+
+|      ^    |      |
+|      |    |      |
+|      +----+      |
+|                  |
++---- PROBE_RTT <--+
+```
+
+## BBR 论文中提出的问题
+
+> 蜂窝网络中的自适应带宽
+
+蜂窝网络根据每个用户的数据包排队 (queue of packets) 情况调整每个用户的带宽 (adapt per-subscriber bandwidth)
+BBRv1 产生非常小的队列, 导致在低速情况下连接卡顿 (stuck at low rates), 增大峰值 ProbeBW pacingGain 以产生较大的队列，会使得卡住的情况大大减少，这暗示较大的队列对于某些网络不是坏事
+
+> 延迟和聚合 ACK
+
+蜂窝网络, 无线网络和有线宽带网络经常会延迟和聚合 ACK (delay and aggregate) 当 inflight 限制到单个 BDP 时, 会导致因为数据量太少而导致卡顿
+将 ProbeBW cwndGain 增大到 2, 使得 BBR 可以在估算的传输速率上持续平稳发送, 即使 ACK 被延迟了一个 RTT, 显著避免了卡顿
+
+## 基于强化学习的 bbr 参数优化
+
+思路参考 Accelerating Loss Recovery for Content Delivery Network
+
+bbr 通过估算瓶颈带宽 BtlBw (传输速率的最大值) 和往返传播时间 (RTprop) 动态调整发送速率
+
+bbr 的参数, 例如最小 rtt 的探测周期, pacingGain, cwndGain 通常是静态或半静态的
+
+1. 现有的解决方案大多数是静态的使用固定值调整 bbr 的参数 (某事件发生时, 调整一个固定值), 难以适应复杂的网络环境, 例如无线网络中多用户接入时, 剧烈的带宽波动
+2. 固定的参数, 也难以保证多个 tcp 流竞争时的公平性
+
+强化学习的核心是通过试错学习最优策略, 使用 RL 优化 bbr 参数, 关键包括
+
+1. 状态 (State) 定义
+
+- 网络状态
+  - 实时测量的 BtlBw, RTprop
+  - 队列排队延迟 (通过 rtt 变化推断?)
+  - 丢包率
+  - 链路利用率 (发送速率 / BtlBw)
+- 流状态
+  - 当前的发送速率 (ns3 pacingRate), 拥塞窗口 cwnd
+  - rtt 变化趋势
+- 环境特征
+  - 网络特征: 有线/无线
+  - 竞争的 tcp 流的数量 (通过 ack 间隔推断?)
+
+2. 动作 (Action) 空间
+
+   - 离散动作, 使用 DQN 强化学习算法: 微调 pacingGain 和 cwndGain 增益系数, 从预定义集合中选择, 例如 `{0.5, 0.75, 1.0, 1.25, 1.5}`
+   - 连续动作, 使用 PPO 强化学习算法: 微调 pacingGain 和 cwndGain 增益系数, 从某个范围中选择, 例如 pacingGain `[0.5, 2.0]`, cwndGain `[1.0, 3.0]`
+
+3. 奖励函数
+
+设计多目标奖励函数 (AI 生成)
+
+![多目标奖励函数](./assets/1745410688166.png)
+
+- 吞吐量: 单位时间内传输的数据量
+- 队列延迟: 通过 RTT - RTprop 估算
+- 不公平性: 流场景下使用 Jain 公平指数惩罚
+- 速率震荡: 惩罚发送速率的方差 (保证平滑性)
+
+### 强化学习算法选择
+
+- DQN: 适用于离散动作空间, 实现简单, 适合初步验证
+- PPO: 适用于连续动作空间, 实现复杂, 调整参数更灵活
