--- a/说明书摘要.md
+++ b/说明书摘要.md
@@ -1,1 +1,1 @@
-本发明属于计算机网络拥塞控制领域，公开了一种结合强化学习和ECN显式拥塞通知机制，对BBR v1拥塞控制协议的动态参数优化方法。传统BBR协议中，关键参数固定、难以适应复杂的网络环境。本发明基于BBR状态机，使用强化学习算法动态生成对拥塞窗口增益、最小RTT探测周期等关键参数的调整策略，使协议能够根据当前的链路状态，对关键参数进行动态优化，并且参考DCTCP协议，在BBR协议中集成ECN显式拥塞通知机制，允许客户端向服务器反馈拥塞信息，增强协议对链路状态的实时感知能力和快速拥塞响应能力。该方法适用于数据中心网络、无线网络等多种场景，纯软件实现，不依赖特定的硬件，易于在网络协议栈中部署。基于网络模拟器ns3的测试表明，该方法能够有效的提高网络传输性能，增大吞吐量的同时，降低往返时延和丢包率。
+本发明属于计算机网络拥塞控制领域，公开了一种结合强化学习和ECN显式拥塞通知机制，对BBR v1拥塞控制协议的动态参数优化方法。传统BBR协议中，关键参数固定、难以适应复杂的网络环境。本发明基于BBR状态机，使用强化学习算法动态生成对BBR关键参数，包括拥塞窗口增益、最小RTT探测周期的调整策略，使协议能够根据当前的链路状态，对关键参数进行动态优化。同时在BBR中集成ECN显式拥塞通知机制，允许客户端向服务器反馈拥塞信息，增强协议对链路状态的实时感知能力和快速拥塞响应能力。该方法适用于数据中心网络、无线网络等多种场景，纯软件实现，不依赖特定的硬件，易于在网络协议栈中部署。基于网络模拟器ns3的测试表明，该方法能够有效的提高网络传输性能，增大吞吐量的同时，降低往返时延和丢包率。
